--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
     "vue-notification": "^1.3.4",
     "marked": "^0.3.7",
     "vue-directive-tooltip": "^1.4.1"
+  },
+  "dependencies": {
+    "vue-gmaps": "^0.2.2"
   }
 }
