--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=cbd6e9b0e83d9120517a",
-    "/css/app.css": "/css/app.css?id=0a25d8cfce9c8cb33447",
-    "/js/app.js.map": "/js/app.js.map?id=2943336e0fe707dadc13",
-    "/css/app.css.map": "/css/app.css.map?id=516bf3da4d93de8e038d"
+    "/js/app.js": "/js/app.js?id=1116734f5492cf5d5287",
+    "/css/app.css": "/css/app.css?id=9191ea87eaff707d2c77"
 }
